--- a/public/index.html
+++ b/public/index.html
@@ -26,27 +26,47 @@
     -->
     <title>Yoane : Home</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/>
+    <link
+      rel="shortcut icon"
+      type="image/icon"
+      href="assets/images/favicon.ico"
+    />
     <!-- Font Awesome -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+    <link
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
     <!-- Bootstrap -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <!-- Slick slider -->
-    <link href="assets/css/slick.css" rel="stylesheet">
+    <link href="assets/css/slick.css" rel="stylesheet" />
     <!-- Gallery Lightbox -->
-    <link href="assets/css/magnific-popup.css" rel="stylesheet">
+    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
     <!-- Theme color -->
-    <link id="switcher" href="assets/css/theme-color/default-theme.css" rel="stylesheet">
+    <link
+      id="switcher"
+      href="assets/css/theme-color/default-theme.css"
+      rel="stylesheet"
+    />
 
     <!-- Main Style -->
-    <link href="style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" />
 
     <!-- Fonts -->
 
     <!-- Open Sans for body font -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800"
+      rel="stylesheet"
+    />
     <!-- Poppins for Title -->
-  	<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -63,24 +83,30 @@
     -->
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <!-- Bootstrap -->
-    <script src="assets/js/bootstrap.min.js"></script>
-	<!-- Slick slider -->
-    <script type="text/javascript" src="assets/js/slick.min.js"></script>
-    <!-- Filterable Gallery js -->
-    <script type="text/javascript" src="assets/js/jquery.filterizr.min.js"></script>
-    <!-- Gallery Lightbox -->
-    <script type="text/javascript" src="assets/js/jquery.magnific-popup.min.js"></script>
-    <!-- Ajax contact form  -->
-    <script type="text/javascript" src="assets/js/app.js"></script>
-	<!-- Featured Slider -->
-    <script type="text/javascript" src="assets/js/typed.min.js"></script>
-    <!-- On scroll JS  -->
-    <script src="assets/js/jquery.appear.js"></script>
-	<!-- Progress Bar -->
-    <script type="text/javascript" src="assets/js/jquery.lineProgressbar.js"></script>
-
-    
-    
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <!-- Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Slick slider -->
+  <script type="text/javascript" src="assets/js/slick.min.js"></script>
+  <!-- Filterable Gallery js -->
+  <script
+    type="text/javascript"
+    src="assets/js/jquery.filterizr.min.js"
+  ></script>
+  <!-- Gallery Lightbox -->
+  <script
+    type="text/javascript"
+    src="assets/js/jquery.magnific-popup.min.js"
+  ></script>
+  <!-- Ajax contact form  -->
+  <script type="text/javascript" src="assets/js/app.js"></script>
+  <!-- Featured Slider -->
+  <script type="text/javascript" src="assets/js/typed.min.js"></script>
+  <!-- On scroll JS  -->
+  <script src="assets/js/jquery.appear.js"></script>
+  <!-- Progress Bar -->
+  <script
+    type="text/javascript"
+    src="assets/js/jquery.lineProgressbar.js"
+  ></script>
 </html>
