--- a/public/index.html
+++ b/public/index.html
@@ -36,24 +36,22 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
       rel="stylesheet"
     />
-    <!-- Bootstrap -->
-    <link
+    <!-- Bootstrap  <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-    />
-    <!-- Slick slider -->
-    <link href="assets/css/slick.css" rel="stylesheet" />
-    <!-- Gallery Lightbox -->
-    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
-    <!-- Theme color -->
-    <link
+    />-->
+
+    <!-- Slick slider  <link href="assets/css/slick.css" rel="stylesheet" />-->
+
+    <!-- Gallery Lightbox  <link href="assets/css/magnific-popup.css" rel="stylesheet" />-->
+
+    <!-- Theme color <link
       id="switcher"
       href="assets/css/theme-color/default-theme.css"
       rel="stylesheet"
-    />
+    />-->
 
-    <!-- Main Style -->
-    <link href="style.css" rel="stylesheet" />
+    <!-- Main Style  <link href="style.css" rel="stylesheet" />-->
 
     <!-- Fonts -->
 
@@ -67,6 +65,14 @@
       href="https://fonts.googleapis.com/css?family=Poppins"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/unicons.css" />
+    <link rel="stylesheet" href="css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+
+    <!-- MAIN STYLE -->
+    <link rel="stylesheet" href="css/tooplate-style.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -93,20 +99,32 @@
     type="text/javascript"
     src="assets/js/jquery.filterizr.min.js"
   ></script>
-  <!-- Gallery Lightbox -->
+  <!-- Gallery Lightbox 
+  
+  
   <script
     type="text/javascript"
     src="assets/js/jquery.magnific-popup.min.js"
   ></script>
-  <!-- Ajax contact form  -->
-  <script type="text/javascript" src="assets/js/app.js"></script>
-  <!-- Featured Slider -->
-  <script type="text/javascript" src="assets/js/typed.min.js"></script>
-  <!-- On scroll JS  -->
-  <script src="assets/js/jquery.appear.js"></script>
-  <!-- Progress Bar -->
-  <script
+
+   <script type="text/javascript" src="assets/js/app.js"></script>
+
+    <script type="text/javascript" src="assets/js/typed.min.js"></script>
+
+<script src="assets/js/jquery.appear.js"></script>
+<script
     type="text/javascript"
     src="assets/js/jquery.lineProgressbar.js"
   ></script>
+
+  -->
+
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/Headroom.js"></script>
+  <script src="js/jQuery.headroom.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/smoothscroll.js"></script>
+  <script src="js/custom.js"></script>
 </html>
